Restore local subframe size after printing

During refactoring of SetPrinting() in LocalFrame, for local subframes,
we accidentally forgot to call EndPrinting to restore its size. Fix it
and set correct expectation for unit test.

BUG=817285

Change-Id: I5187f9646cc9ed13a21f7093b33e2afa3bed88a4
Reviewed-on: https://chromium-review.googlesource.com/941885
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Commit-Queue: Wei Li <weili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540073}
Former-commit-id: 25c1dd7ac3f592b3d913964104ca60c5a12ec4d2